--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -33,7 +33,7 @@
         "plt.legend()\n",
         "plt.show()\n",
         "\n",
-        "\n",
+        "#test\n",
         "\n"
       ],
       "execution_count": 0,
