--- a/variable_scope.ipynb
+++ b/variable_scope.ipynb
@@ -30,11 +30,7 @@
       "metadata": {
         "id": "kcpfgF0DiEAw",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 433
-        },
-        "outputId": "73c4c5b1-d420-4ef7-8e77-8d2ecf437254"
+        "colab": {}
       },
       "source": [
         "import tensorflow as tf\n",
@@ -109,43 +105,8 @@
         "\n",
         "\n"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0629 09:25:11.050745 140134784124800 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "scope/first:0\n",
-            "scope/scope1/first:0\n",
-            "scope2/first:0\n",
-            "scope/first:0\n",
-            "scope/scope1/first:0\n",
-            "scope2/first:0\n",
-            "var1 =  [1 1]\n",
-            "var2 =  [1 1]\n",
-            "var3 =  [3 3]\n",
-            "sp.name= scope1\n",
-            "var1.name= scope1/v:0\n",
-            "sp1.name= scope1\n",
-            "var2.name= scope2/v:0\n",
-            "var3.name= scope1/v3:0\n",
-            "var4.name= scope1//v4:0\n",
-            "v.name =  scope/v:0\n",
-            "x.op.name= scope_2/bar/add\n",
-            "y.op.name= add\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
